# oe-alliance-plugins

./: Makefile.am  configure.ac
Blindscan/src/: plugin.py
GigaBlueVFDControl/src/: plugin.py
TransCodingSetup/src/: plugin.py
