ACLOCAL_AMFLAGS = -I m4

SUBDIRS = Blindscan DLNABrowser DLNAServer StreamTV 3GModemManager TunerServer OnDemand Fempa LCD4linux RemoteChannelStreamConverter BTDevicesManager SatipClient TerrestrialScan

if MIPSEL
SUBDIRS += WirelessAccessPoint
endif

if VUUNO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUULTIMO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUDUO
SUBDIRS += VuDuoFanControl
endif

if VUSOLO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUSOLOSE
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUDUO2
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if VUZERO
SUBDIRS += FirmwareUpgrade VuRemote
endif

if VUSOLO4K
SUBDIRS += FirmwareUpgrade VuRemote TransCodingSetup
endif

if GIGABLUE
SUBDIRS += GigaBlueVFDControl AudioEffect
endif



if HAVE_TEMPFANCONTROL
SUBDIRS += TempFanControl
endif

if GBQUADPLUS
SUBDIRS += TransCodingSetup
endif

if GBQUAD
SUBDIRS += TransCodingSetup
endif

if GB7356
SUBDIRS += TransCodingSetup
endif

if VUPLUS
SUBDIRS += HbbTV AudioEffect
endif

if WETEK
SUBDIRS += RCUSelect ReZap
endif

if XC7362
SUBDIRS += VPLEDControl
endif

